@@ -1,143 +1,0 @@
-#
-# Game list/menu file.  Sorry, I was a lazzy prick and re-used libConfuse for
-# parsing the game list file.  On a possitive note, the file is validated and
-# it's extensible (within the limitations of libConfuse syntax).
-#
-# Menu nesting is NOT supported at this time.
-#
-# This file is parsed top down.  Create one or more menu blocks and include
-# one ore more game blocks as children.  To hide a menu or a game, prefix the
-# game title or the menu title with a '.'
-#
-# Example:
-#
-# menu "My Games" {
-#   # sorted: optional: sort games alphabetically (defaults to true)
-#   sorted = true|false
-#   ...
-#   # rom:    required: rom file name
-#   # title:  required: friendly game name
-#   # params: optional: extra command line parameters
-#   game { rom = abc123 title = "The abc 123 game" params = "-full" }
-#   game { rom = def456 title = "The def 456 game" }
-# }
-#
-
-menu ".Adult Games" {
-  game { rom = "sxyreact" title = "Pachinko Sexy Reaction" }
-  game { rom = "fantasia" title = "Fantasia" }
-  game { rom = "fantsia2" title = "Fantasia 2" }
-  game { rom = "galpanis" title = "Gals Panic S" }
-  game { rom = "hotpinbl" title = "Hot Pinball" }
-  game { rom = "zerozone" title = "Zero Zone" }
-}
-
-menu "Free Games" {
-  game { rom = "robby" title = "Robby Roto" }
-}
-
-menu "Fighting Games" {
-  game { rom = "sf2" title = "Street Fighter II" }
-  game { rom = "sfa" title = "Stree Fighter Alpha: Warrior's Dream" }
-  game { rom = "xmvsf" title = "X-Men Vs Street Fighter" }
-  game { rom = "sf2ce" title = "Street Fight II: CE" }
-  game { rom = "sfa3" title = "Street Fighter Alpha 3" }
-  game { rom = "mshvsf" title = "Marvel Super Heros vs Street Fighter" }
-  game { rom = "sf2ui" title = "Street Fighter II - The World Warrior" }
-  game { rom = "ga2" title = "Golden Axe - Revenge of Death Adder" }
-  game { rom = "nbbatman" title = "Ninja Baseball Batman" }
-  game { rom = "xmvsf" title = "X-Men Vs. Street Fighter" }
-  game { rom = "simpsn2p" title = "The Simpsons" }
-  game { rom = "mk" title = "Mortal Combat" }
-  game { rom = "kinst" title = "Killer Instinct" }
-  game { rom = "kof98" title = "King of Fighters 98" }
-  game { rom = "kof95" title = "King of Fighters 95" }
-  game { rom = "lastblad" title = "Last Blade" }
-  game { rom = "mvsc" title = "Marvel vs Capcom" }
-  game { rom = "mk2" title = "Mortal Combat 2" }
-  game { rom = "sfa2" title = "Street Fight Alpha 2" }
-  game { rom = "avsp" title = "Alien vs Predator" }
-  game { rom = "sailormn" title = "Prett Soilder Sailor Moon" }
-  game { rom = "tmnt" title = "Teenage Mutant Ninja Turtles" }
-  game { rom = "tmnt2" title = "Teenage Mutant Ninja Turtls 2" }
-  game { rom = "xmen" title = "X-Men" }
-}
-
-menu "Puzzle Games" {
-  game { rom = "pbobblen" title = "Puzzle Bobble" }
-  game { rom = "pbobble2" title = "Puzzle Bobble 2" }
-  game { rom = "pbobble3" title = "Puzzle Bobble 3" }
-  game { rom = "pbobble4" title = "Puzzle Bobble 4" }
-  game { rom = "atetris" title = "Tetris" }
-  game { rom = "drmario" title = "Vs. Dr. Mario" }
-  game { rom = "columns" title = "Columns" }
-  game { rom = "columns2" title = "Columns 2" }
-  game { rom = "magdrop2" title = "Magic Drop 2" }
-  game { rom = "magdrop3" title = "Magic Drop 3" }
-}
-
-menu "Sports Games" {
-  game { rom = "2020bb" title = "2020 Super Baseball" }
-  game { rom = "cscluba" title = "Capcom Sports Club" }
-  game { rom = "nbajam" title = "NBA Jam" }
-  game { rom = "nbahangt" title = "NBA Hang Time" }
-  game { rom = "openice" title = "2 on 2 Open Ice Challenge" }
-  game { rom = "neocup98" title = "Neo-Geo Cup 98" }
-  game { rom = "pwrgoal" title = "Power Goal" }
-}
-
-menu "Airplane Games" {
-  game { rom = "1942" title = "1942" }
-  game { rom = "1943" title = "1943 - The Battle of Midway" }
-  game { rom = "cawing" title = "Carrier Air Wing" }
-  game { rom = "batrider" title = "Armed Police Batrider" }
-  game { rom = "agallet" title = "Air Gallet" }
-  game { rom = "19xx" title = "19xx: The war Against Destiny" }
-  game { rom = "s1945p" title = "Strikes 1945 Plus" }
-}
-
-menu "Classic Games" {
-  game { rom = "pacman" title = "Pac-Man" }
-  game { rom = "joust" title = "Joust" }
-  game { rom = "marble" title = "Marble Madness" }
-  game { rom = "ldrun" title = "Lode Runner" }
-  game { rom = "galaga" title = "Galaga" }
-  game { rom = "frogger" title = "Frogger" }
-  game { rom = "arkanoid" title = "Arkanoid" }
-  game { rom = "digbug" title = "Dig Dug" }
-  game { rom = "dkong" title = "Donkey Kong" }
-  game { rom = "galaxian" title = "Galaxian" }
-  game { rom = "mario" title = "Mario Bros" }
-  game { rom = "mspacman" title = "Ms. Pac-Man" }
-  game { rom = "qbert" title = "Q*bert" }
-  game { rom = "arknoid2" title = "Arkanoid - Revenge of DOH" }
-  game { rom = "invaders" title = "Space Invaders" }
-  game { rom = "invadpt2" title = "Space Invaders Part II" }
-}
-
-menu "Maze Games" {
-  game { rom = "pacmania" title = "Pac-Mania" }
-  game { rom = "bombrman" title = "Bomberman" }
-  game { rom = "digdug" title = "Dig Dug" }
-  game { rom = "digdug2" title = "Dig Dug II" }
-  game { rom = "hyperpac" title = "Hyper Pac-Man" }
-  game { rom = "jrpacman" title = "Jr. Pac-Man" }
-}
-
-menu "War Games" {
-  game { rom = "btlecity" title = "Vs. Battle City" }
-  game { rom = "mslug" title = "Metal Slug" }
-  game { rom = "mslug2" title = "Metal Slug 2" }
-  game { rom = "mslug3" title = "Metal Slug 3" }
-  game { rom = "tankfrce" title = "Tank Force" }
-}
-
-menu "Platform Games" {
-  game { rom = "suprmrio" title = "Vs. Super Mario Bros" }
-  game { rom = "bublbobl" title = "Bubble Bobble" }
-  game { rom = "bublbob2" title = "Bubble Bobble 2" }
-  game { rom = "pacland" title = "Pac-Land" }
-  game { rom = "rampage" title = "Rampage" }
-  game { rom = "shinobi" title = "Shinobi" }
-  game { rom = "wboy" title = "Wonder Boy" }
-}
