@@ -36,11 +36,9 @@ down = 274       # down   p1-down
 pgup = 276       # right  p1-right
 pgdown = 275     # left   p1-left
 
-reload = 53      # 5      coin1
-showhide = 54    # 6      coin2
-
 select = 49      # 1      p1-start
 back = 50        # 2      p2-start
 
-# this option is not a keycode, it is a key modifier (see SDLMod enum)
-alphamod = 64    # lctrl  p1-btn1
+# these options are not keycodes, they are key modifiers (see SDLMod enum)
+alphamod = 0x0040 # lctrl  p1-btn1
+viewmod  = 0x0100 # lalt   p1-btn2
