@@ -72,11 +72,10 @@ void options::load(const char* conf_dir)
       CFG_INT(KEY_KEYCODE_DOWN, 274, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_PGUP, 276, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_PGDOWN, 275, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_RELOAD, 53, CFGF_NONE),
-      CFG_INT(KEY_KEYCODE_TOGGLE, 54, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_SELECT, 49, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_BACK, 50, CFGF_NONE),
       CFG_INT(KEY_KEYCODE_ALPHAMOD, 64, CFGF_NONE),
+      CFG_INT(KEY_KEYCODE_VIEWMOD, 256, CFGF_NONE),
       CFG_END()
    };
    
